log/HamamatsuApp_log_181123_162240.txt
2018-11-23T16:22:40|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 32, in <module>
    app = HamamatsuApp(sys.argv)
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraApp.py", line 15, in setup
    from CameraHardware import HamamatsuHardware
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraHardware.py", line 8, in <module>
    import CameraDevice
  File "C:\LabPrograms\Python\Camera-ScopeFoundry\CameraDevice.py", line 811
    if (cur_buffer_index < self.buffer_index): #this condition is mainly "False" but sometimes is true, I think when the buffer finishes its space
     ^
IndentationError: expected an indented block

